# kalki

./: .clag-form  .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
benchmark_results/: agent_log_service_benchmark.json  agent_log_service_benchmark.md
benchmarks/: CMakeLists.txt  agent_log_service_benchmark.cc
include/kalki/api/: agent_log_service.h
include/kalki/common/: config.h  logging.h  retry.h  task_queue.h  thread_pool.h  types.h
include/kalki/core/: database_engine.h
include/kalki/llm/: embedding_client.h  gemini_client.h  llm_client.h  local_embedding_client.h
include/kalki/metadata/: metadata_store.h
include/kalki/query/: query_coordinator.h  similarity.h
include/kalki/storage/: baked_block.h  bloom_filter.h  compression.h  fresh_block.h  wal.h
include/kalki/workers/: compaction_worker.h  ingestion_worker.h
proto/: CMakeLists.txt  kalki.proto
sandbox/: README.md  __init__.py  app.py  kalki_grpc_client.py  push_rows.py  requirements.txt  startup.sh
scripts/: generate_benchmark_report.py  run_agent_log_benchmarks.sh
src/api/: CMakeLists.txt  agent_log_service.cc
src/common/: CMakeLists.txt  config.cc  logging.cc  thread_pool.cc
src/core/: CMakeLists.txt  database_engine.cc
src/llm/: CMakeLists.txt  gemini_client.cc  local_embedding_client.cc
src/metadata/: CMakeLists.txt  metadata_store.cc
src/query/: CMakeLists.txt  query_coordinator.cc  similarity.cc
src/server/: CMakeLists.txt  main.cc  statusz_http_server.cc  statusz_http_server.h
src/storage/: CMakeLists.txt  baked_block.cc  bloom_filter.cc  compression.cc  fresh_block.cc  wal.cc
src/workers/: CMakeLists.txt  compaction_worker.cc  ingestion_worker.cc
tests/: CMakeLists.txt  agent_log_service_test.cc  block_lifecycle_test.cc  database_e2e_test.cc  gemini_client_test.cc  local_embedding_client_test.cc  metadata_store_test.cc  query_behavior_test.cc
tests/common/: fake_clients.h
