cmake_minimum_required(VERSION 3.23)
project(kalki LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

option(KALKI_BUILD_TESTS "Build tests" ON)
option(KALKI_BUILD_BENCHMARKS "Build benchmark targets" OFF)

find_package(PkgConfig REQUIRED)
find_package(absl CONFIG REQUIRED)
find_package(Protobuf CONFIG QUIET)
if (NOT Protobuf_FOUND)
    find_package(Protobuf REQUIRED)
endif ()
if (TARGET Protobuf::libprotobuf AND NOT TARGET protobuf::libprotobuf)
    add_library(protobuf::libprotobuf ALIAS Protobuf::libprotobuf)
elseif (TARGET protobuf::libprotobuf AND NOT TARGET Protobuf::libprotobuf)
    add_library(Protobuf::libprotobuf ALIAS protobuf::libprotobuf)
elseif (NOT TARGET protobuf::libprotobuf)
    add_library(protobuf::libprotobuf INTERFACE IMPORTED)
    target_link_libraries(protobuf::libprotobuf INTERFACE ${Protobuf_LIBRARIES})
endif ()

if (TARGET Protobuf::protoc AND NOT TARGET protobuf::protoc)
    add_executable(protobuf::protoc ALIAS Protobuf::protoc)
elseif (NOT TARGET protobuf::protoc)
    add_executable(protobuf::protoc IMPORTED GLOBAL)
    set_target_properties(protobuf::protoc PROPERTIES IMPORTED_LOCATION "${Protobuf_PROTOC_EXECUTABLE}")
endif ()

find_package(gRPC CONFIG QUIET)
if (NOT gRPC_FOUND)
    pkg_check_modules(GRPCPP REQUIRED IMPORTED_TARGET grpc++)
    add_library(gRPC::grpc++ INTERFACE IMPORTED)
    target_link_libraries(gRPC::grpc++ INTERFACE PkgConfig::GRPCPP)
endif ()

if (NOT TARGET gRPC::grpc_cpp_plugin)
    find_program(KALKI_GRPC_CPP_PLUGIN_EXECUTABLE grpc_cpp_plugin REQUIRED)
    add_executable(gRPC::grpc_cpp_plugin IMPORTED GLOBAL)
    set_target_properties(gRPC::grpc_cpp_plugin PROPERTIES
        IMPORTED_LOCATION "${KALKI_GRPC_CPP_PLUGIN_EXECUTABLE}")
endif ()

find_package(CURL REQUIRED)
find_package(SQLite3 REQUIRED)
if (NOT TARGET CURL::libcurl)
    message(FATAL_ERROR "CURL::libcurl target is required but was not provided by find_package(CURL)")
endif ()
if (NOT TARGET SQLite::SQLite3)
    message(FATAL_ERROR "SQLite::SQLite3 target is required but was not provided by find_package(SQLite3)")
endif ()

find_package(llama CONFIG QUIET)
if (NOT llama_FOUND)
    pkg_check_modules(LLAMA REQUIRED IMPORTED_TARGET llama)
    add_library(llama INTERFACE IMPORTED)
    target_link_libraries(llama INTERFACE PkgConfig::LLAMA)
endif ()
find_package(Faiss CONFIG QUIET)
if (NOT Faiss_FOUND)
    pkg_check_modules(FAISS REQUIRED IMPORTED_TARGET faiss)
    add_library(Faiss::Faiss INTERFACE IMPORTED)
    target_link_libraries(Faiss::Faiss INTERFACE PkgConfig::FAISS)
elseif (TARGET faiss AND NOT TARGET Faiss::Faiss)
    add_library(Faiss::Faiss ALIAS faiss)
elseif (TARGET faiss::faiss AND NOT TARGET Faiss::Faiss)
    add_library(Faiss::Faiss ALIAS faiss::faiss)
elseif (NOT TARGET Faiss::Faiss)
    message(FATAL_ERROR
            "FAISS was found, but no supported CMake target was exported "
            "(expected Faiss::Faiss, faiss, or faiss::faiss).")
endif ()

if (TARGET llama AND NOT TARGET Llama::llama)
    add_library(Llama::llama ALIAS llama)
elseif (NOT TARGET llama AND TARGET Llama::llama)
    add_library(llama ALIAS Llama::llama)
elseif (NOT TARGET llama AND NOT TARGET Llama::llama)
    message(FATAL_ERROR
            "llama.cpp was found but no supported CMake target was exported "
            "(expected llama or Llama::llama).")
endif ()

pkg_check_modules(ZSTD REQUIRED IMPORTED_TARGET libzstd)

add_subdirectory(proto)
add_subdirectory(src/common)
add_subdirectory(src/storage)
add_subdirectory(src/metadata)
add_subdirectory(src/llm)
add_subdirectory(src/workers)
add_subdirectory(src/query)
add_subdirectory(src/core)
add_subdirectory(src/api)
add_subdirectory(src/server)

if (KALKI_BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif ()

if (KALKI_BUILD_BENCHMARKS)
    add_subdirectory(benchmarks)
endif ()
